--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@storybook/addon-info": "^5.2.1",
     "@storybook/react": "5.2.1",
+    "@types/classnames": "^2.2.9",
     "@types/history": "^4.7.3",
     "@types/storybook__react": "^4.0.2",
     "@types/webpack": "^4.39.2",
@@ -51,6 +52,7 @@
     "sass-lint": "^1.13.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "tslint": "^5.20.0",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
